--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -124,12 +124,17 @@ body {
     cursor: pointer;
     justify-content: flex-end;
 }
+.errorMessage{
+    color: lightcoral;
+    height: auto;
+    text-decoration: none;
+}
 
 .login-forgotPassword p {
     font-size: .8em;
 }
 
-.login-field button {
+.login-field input[type="submit"] {
     width: 230px;
     height: 50px;
     background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
