--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
         integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
     <script th:src="@{/js/login.js}"></script>
-    <title>Uptake sign in!</title>
+    <title>Uptake sign up!</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             <img id="login-left-vector" th:src="@{/Assets/Vector-1.svg}" alt="">
             <img id="login-right-vector" th:src="@{/Assets/Vector-2.svg}" alt="">
         </div>
-        <form th:action="@{/login}" method="POST">
+        <form th:action="@{/signup}" method="POST">
             <div class="login-form">
                 <div class="login-logo">
                     <h1>Uptake</h1>
@@ -29,18 +29,27 @@
                 <div class="login-field">
                     <input id="email" name="email" type="text" th:placeholder="#{message.login.email}">
                 </div>
+                <div class="login-field login-forgotPassword errorMessage">
+                        <p th:text="${errorMessages} ? #{message.login.badCredentials}" :> # </p>
+                    </div>
                 <div class="login-field">
                     <input id="password" name="password" type="password" th:placeholder="#{message.login.password}">
                 </div>
                 <div class="login-field login-forgotPassword errorMessage">
-                        <p th:text="${errorMessages} ? #{message.login.badCredentials}" : > # </p>
+                    <p th:text="${errorMessages} ? #{message.login.badCredentials}" :> # </p>
+                </div>
+                <div class="login-field">
+                        <input id="passwordConfirm" name="passwordConfirm" type="password" th:placeholder="#{message.login.passwordConfirm}">
+                    </div>
+                    <div class="login-field login-forgotPassword errorMessage">
+                        <p th:text="${errorMessages} ? #{message.login.badCredentials}" :> # </p>
                     </div>
                 <div class="login-field login-forgotPassword">
                     <p th:text="#{message.login.forgotPassword}"> # </p>
                 </div>
                 <div class="login-field">
-                    <input type="submit" name="submit" th:value="#{message.login.signIn}" >
-                    
+                    <input type="submit" name="submit" th:value="#{message.login.signIn}">
+
                 </div>
                 <div class="login-field login-rememberMe">
                     <input id="RememberMeBox" type="checkbox">
