--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -60,8 +60,8 @@
                         </defs>
                     </svg>
                     <img th:src="@{/Assets/hangout1.svg}" alt="">
-                    <a href="#">
-                        <p th:text="#{message.login.signUp}"> # </p>
+                    <a href="/register">
+                        <p th:text="#{message.login.noAccount}"> # </p>
                     </a>
                 </div>
             </div>
