--- a/src/main/resources/templates/post/addPost.html
+++ b/src/main/resources/templates/post/addPost.html
@@ -8,24 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Uptake sign in!</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <title>Add Post</title>
 </head>
 
 <body>
-<div class="container">
-    <form>
+<div class="container" style="margin-top: 200px;">
+    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="title">Post Title</label>
+            <input type="text" class="form-control" id="title" name="title" placeholder="Enter Post Title">
+            <small id="emailHelp" class="form-text text-muted">Post Title</small>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <label for="description">Description</label>
+            <input type="text" class="form-control" id="description" name="description" placeholder="Description">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
