--- a/src/main/resources/templates/post/addPost.html
+++ b/src/main/resources/templates/post/addPost.html
@@ -16,6 +16,34 @@
 <div class="container" style="margin-top: 200px;">
     <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">
         <div class="form-group">
+            <script>
+                $(document).ready(function () {
+                    $('#inputfile').change(function () {
+                        var file_data = $('#inputfile').prop('files')[0];
+                        var form_data = new FormData();
+                        form_data.append('file', file_data);
+                        $.ajax({
+                            url: "uploadPhoto",
+                            type: "POST",
+                            data: form_data,
+                            contentType: false,
+                            cache: false,
+                            processData: false,
+                            success: function (data) {
+                                console.log(data);
+                                // $('#image').val(data);
+                                // $('#foodImage').attr("src","${pageContext.request.contextPath}/upload?imageId="+data);
+                            },
+                            error: function(error) {
+                                console.log(error);
+                            }
+                        });
+                    });
+                });
+            </script>
+            <input id="inputfile" type="file"/>
+        </div>
+        <div class="form-group">
             <label for="title">Post Title</label>
             <input type="text" class="form-control" id="title" name="title" placeholder="Enter Post Title">
             <small id="emailHelp" class="form-text text-muted">Post Title</small>
