--- a/src/main/resources/templates/admin/base.html
+++ b/src/main/resources/templates/admin/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-<!--    <meta name="author" content="Aka">-->
+    <meta name="author" content="Aka">
     <title>Admin panel</title>
 
     <!-- Bootstrap core CSS -->
@@ -133,4 +133,5 @@
 <!--        crossorigin="anonymous"></script>-->
 
 </body>
+<div th:replace="admin/footer"/></div>
 </html>
