--- a/src/main/resources/templates/post/addPost.html
+++ b/src/main/resources/templates/post/addPost.html
@@ -15,7 +15,8 @@
 <body>
 <div class="container" style="margin-top: 200px;">
     <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">
-        <div class="form-group">
+        <div class="form-group">\
+            <img src="/upload?imageId=${food.image_id}" id="foodImage" height="auto" width="300"/>
             <script>
                 $(document).ready(function () {
                     $('#inputfile').change(function () {
@@ -23,7 +24,8 @@
                         var form_data = new FormData();
                         form_data.append('file', file_data);
                         $.ajax({
-                            url: "uploadPhoto",
+                            url: "/uploadPhoto",
+                            enctype: 'multipart/form-data',
                             type: "POST",
                             data: form_data,
                             contentType: false,
@@ -31,8 +33,8 @@
                             processData: false,
                             success: function (data) {
                                 console.log(data);
-                                // $('#image').val(data);
-                                // $('#foodImage').attr("src","${pageContext.request.contextPath}/upload?imageId="+data);
+                                $('#image').val(data);
+                                $('#foodImage').attr("src","${pageContext.request.contextPath}/upload?imageId="+data);
                             },
                             error: function(error) {
                                 console.log(error);
