--- a/src/main/resources/templates/profile/profilev1.html
+++ b/src/main/resources/templates/profile/profilev1.html
@@ -10,9 +10,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
          .bg_color{
-             border-left:3px solid #222649;
+            background:#fafafa;
              min-height: 100vh;
              width: 100vw;
+             background-color: #222649;
+             text-align: center;
         }
         .photo_wrap{
             width: 180px;
@@ -32,8 +34,7 @@
         }
         .attr{
             font-size: 18px;
-            padding-right:10px;
-            display: inline-block;
+            padding: 10px;
         }
         .attr span{
             font-size: 22px;
@@ -48,11 +49,9 @@
             cursor: pointer;
             display: inline-block;
             margin: 0 auto;
+            line-height: auto;
             font-size: 15px;
             padding: 8px 50px;
-            position: absolute;
-            bottom:3px;
-            margin-left:50px;
         }
         .profile_card{
             text-align: center;
@@ -70,52 +69,50 @@
         .mb10{
             margin-bottom: 10px;
         }
-        .title{
-            position:relative;
-        }
-        .post_card img{
-            width: 100%;
-        }
     </style>
 </head>
 <body>
     <div class="bg_color">
         <div class="container">
-            <div class="row mt40">
+            <div class="row">
                 <div class="col-md-4">
-                    <div class="photo_box">
-                        <div class="photo_wrap" style="background-image: url('/img/profile1.jpg')">
-                    </div>
+                    <div class="profile_card">
+                        <div class="photo_box mt40">
+                            <div class="photo_wrap" style="background-image: url('D:/MUM-Aug2019/EA/CourseProject/uptake/src/main/resources/static/images/profile.jpg')"></div>
+
+                        </div>
+                        <h1 class="title">Anna</h1>
+                        <div class="attr_wrap mb10">
+                            <div class="attr"><span>105</span> posts</div>
+                            <div class="attr"><span>15k</span> follower</div>
+                            <div class="attr"><span>158</span> following</div>
+                        </div>
+                        <a class="uptake-btn">Follow</a>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <h1 class="title" th:text="${user.publicName}"><a class="uptake-btn">Follow</a></h1>
-                    <div class="attr_wrap mb10">
-                        <div class="attr"><span th:text="${user.getPostList().size()}"></span> posts</div>
-                        <div class="attr"><span th:text="${user.getFollowerUserList().size()}"></span> follower</div>
-                        <div class="attr"><span th:text="${user.getFollowingUserList().size()}"></span> following</div>
+                <div class="col-md-4">
+                    <div class="post_wrap">
+                        <img src="./images/post1.jpg"/>
                     </div>
-                    <p th:text="${user.getProfile().getBio()}"></p>
+                </div>
+                <div class="col-md-4">
+                    <div class="post_wrap">
+                        <img src="./images/post2.jpg"/>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="post_wrap">
+                        <img src="./images/post3.jpg"/>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="post_wrap">
+                        <img src="./images/post4.jpg"/>
+                    </div>
                 </div>
             </div>
-            <div class="row mt40">
-                <div class="col-md-3" th:each="p, iterStat : ${user.getPostList()}">
-                    <a th:href="@{'/post/' + ${p.id}}">
-                        <div class="post_card">
-                            <img th:src="@{${'/img/' + p.getPhoto().getPath()}}">
-                            <div th:text="${p.title}"></div>
-                            <div th:text="${p.description}"></div>
-                            <div>
-                                <span th:text="${p.created}"></span>
-                            </div>
-                            <div class="post_card" th:each="comment, iterStat : ${p.getCommentList()}">
-                                <div th:text="${comment.created}"></div>
-                                <div th:text="${comment.description}"></div>
-                                <div th:text="${comment.user.publicName}"></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+            <div class="row">
+                <div class="col-md-12"></div>
             </div>
         </div>
     </div>
