--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -9,115 +9,182 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
-         .bg_color{
-             border-left:3px solid #222649;
-             min-height: 100vh;
-             width: 100vw;
+        .bg_color {
+            border-left: 3px solid #222649;
+            min-height: 100vh;
+            width: 100vw;
         }
-        .photo_wrap{
+
+        .photo_wrap {
             width: 180px;
             height: 180px;
             background-size: cover;
             border-radius: 50%;
             border: 4px solid #FFF;
         }
-        .photo_box{
+
+        .photo_box {
             width: 184px;
             height: 184px;
             padding: 2px;
             border-radius: 50%;
             overflow: hidden;
-            background: linear-gradient(to right, #7f49e5, #F44336,#814ae9);
-            margin:0 auto;
+            background: linear-gradient(to right, #7f49e5, #F44336, #814ae9);
+            margin: 0 auto;
         }
-        .attr{
+
+        .attr {
             font-size: 18px;
-            padding-right:10px;
+            padding-right: 10px;
             display: inline-block;
         }
-        .attr span{
+
+        .attr span {
             font-size: 22px;
             font-weight: 700;
         }
+
         .uptake-btn{
-            background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
             box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.25);
             border-radius: 15px;
-            color: white;
             font-size: 20px;
             cursor: pointer;
             display: inline-block;
             margin: 0 auto;
             font-size: 15px;
             padding: 8px 50px;
-            position: absolute;
-            bottom:3px;
-            margin-left:50px;
+            bottom: 3px;
+            margin-left: 50px;
+            font-weight: 700;
+            transition: .3s all ease-in-out;
         }
-        .profile_card{
+        .uptake-btn.disabled:hover{
+            text-decoration: none;
+            background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
+            color:#FFFFFF;
+        }
+        .uptake-btn.enabled{
+            background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
+            color: white;
+        }
+        .uptake-btn.enabled:hover{
+            text-decoration: none;
+            background: #FFFFFF;
+            color:#6e3dbb;
+        }
+        .uptake-btn.disabled{
+            border: 1px solid #6e3dbb;
+            background: #fff;
+            color: #6e3dbb;
+            font-weight: 700;
+        }
+        .profile_card {
             text-align: center;
             background-color: #fdfdfd;
             box-shadow: -30px 20px 50px rgba(0, 0, 0, 0.4), 30px -20px 50px rgba(0, 0, 0, 0.4);
             width: 100%;
             padding: 25px;
         }
-        .mt10{
+
+        .mt10 {
             margin-top: 10px;
         }
-        .mt40{
+
+        .mt40 {
             margin-top: 40px;
         }
-        .mb10{
+
+        .mb10 {
             margin-bottom: 10px;
         }
-        .title{
-            position:relative;
+
+        .title {
+            position: relative;
         }
-        .post_card img{
+
+        .post_card img {
             width: 100%;
         }
+        .w700{font-weight:700;}
+        .t20{font-size:20px; margin-top:20px;}
+        .post_pop_card{width: 800px;
+            width: 800px;
+            background: #fff;
+            margin: 0 auto;
+            margin-top: 10%;}
+        .date{font-size:12px; color:#ccc;}
+        .mt20{margin-top:20px;}
+        .mr15{margin-right: 5px;}
+        .smallImg{width: 30px; height: 30px;border-radius: 50%; margin-right: 10px;}
+        .ptr15{padding-right: 15px;}
+        .grid-wrapper{display: grid;grid-template-columns: 500px 400px;}
+        .col-one{grid-column: 1/1;}
+        .col-two{grid-column: 2/2;
+            background: #fff;
+            padding: 15px;}
+        .postimg img{width: 100%;}
+        .comment_items{height: 300px;
+            overflow-y: scroll;}
     </style>
+
 </head>
 <body>
-    <div class="bg_color">
-        <div class="container">
-            <div class="row mt40">
-                <div class="col-md-4">
-                    <div class="photo_box">
-                        <div class="photo_wrap" style="background-image: url('/img/profile1.jpg')">
+<div class="bg_color">
+    <div class="container">
+        <div class="row mt40">
+            <div class="col-md-4">
+                <div class="photo_box">
+                    <div class="photo_wrap" style="background-image: url('/img/profile1.jpg')">
                     </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <h1 class="title" th:text="${user.publicName}"><a class="uptake-btn">Follow</a></h1>
-                    <div class="attr_wrap mb10">
-                        <div class="attr"><span th:text="${user.getPostList().size()}"></span> posts</div>
-                        <div class="attr"><span th:text="${user.getFollowerUserList().size()}"></span> follower</div>
-                        <div class="attr"><span th:text="${user.getFollowingUserList().size()}"></span> following</div>
-                    </div>
-                    <p th:text="${user.getProfile().getBio()}"></p>
                 </div>
             </div>
-            <div class="row mt40">
-                <div class="col-md-3" th:each="p, iterStat : ${user.getPostList()}">
-                    <a th:href="@{'/post/' + ${p.id}}">
-                        <div class="post_card">
-                            <img th:src="@{${'/img/' + p.getPhoto().getPath()}}">
-                            <div th:text="${p.title}"></div>
-                            <div th:text="${p.description}"></div>
-                            <div>
-                                <span th:text="${p.created}"></span>
-                            </div>
-                            <div class="post_card" th:each="comment, iterStat : ${p.getCommentList()}">
-                                <div th:text="${comment.created}"></div>
-                                <div th:text="${comment.description}"></div>
-                                <div th:text="${comment.user.publicName}"></div>
-                            </div>
-                        </div>
-                    </a>
+            <div class="col-md-8">
+                <h1>
+                    <strong class="title" th:text="${user.username}"></strong>
+                    <span th:if="${isFollowing}" style="font-size:14px; font-weight: 700">Following</span>
+                    <a th:unless="${isFollowing}" class="uptake-btn enabled" th:href="'/profile/follow/' + ${user.id}">Follow</a>
+                </h1>
+                <div class="attr_wrap mb10">
+                    <div class="attr"><span th:text="${user.getPostList().size()}"></span> posts</div>
+                    <div class="attr"><span th:text="${user.getFollowedUsers().size()}"></span> follower</div>
+                    <div class="attr"><span th:text="${user.getFollowingUser().size()}"></span> following</div>
+                </div>
+                <p th:text="${user.getProfile() != null ? user.getProfile().getBio() : 'insert you bio'}"></p>
+            </div>
+        </div>
+        <div class="row mt40">
+            <div class="col-md-3" th:each="p, iterStat : ${user.getPostList()}">
+                    <div th:onclick="'openPostModal(\'' + ${p.id} + '\');'">
+                    <div class="post_card">
+                        <img th:src="@{${'/img/' + p.getPhoto().getPath()}}">
+<!--                        <div th:text="${p.title}"></div>-->
+<!--                        <div th:text="${p.description}"></div>-->
+<!--                        <div>-->
+<!--                            <span th:text="${p.created}"></span>-->
+<!--                        </div>-->
+<!--                        <div class="post_card" th:each="comment, iterStat : ${p.getCommentList()}">-->
+<!--                            <div th:text="${comment.created}"></div>-->
+<!--                            <div th:text="${comment.description}"></div>-->
+<!--                            <div th:text="${comment.user.username}"></div>-->
+<!--                        </div>-->
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div id="postModalHolder"><div id="postModal"></div></div>
+    <script>
+        function openPostModal(id) {
+            console.log("open modal called");
+            $.ajax({
+                url: "/post/" + id,
+                success: function(data) {
+                    $('#postModalHolder').html(data);
+                    $('#postModal').modal("show");
+                }
+            });
+        }
+    </script>
 </body>
 </html>
