--- a/src/main/resources/templates/post/addPost.html
+++ b/src/main/resources/templates/post/addPost.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-<div class="container" style="margin-top: 200px;">
-    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">
-        <div class="form-group">\
-            <img src="/image?imageId=${food.image_id}" id="foodImage" height="auto" width="300"/>
+<div class="container">
+<!--    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">-->
+    <form method="POST" action="#" th:action="@{/addPostData}" >
+        <div class="form-group" style="height: 400px;">
+            <img src="" id="foodImage" style="height: 100%;width: 100%;object-fit: cover;"/>
             <script>
                 $(document).ready(function () {
                     $('#inputfile').change(function () {
@@ -31,10 +32,10 @@
                             contentType: false,
                             cache: false,
                             processData: false,
-                            success: function (data) {
-                                console.log(data);
-                                $('#image').val(data);
-                                $('#foodImage').attr("src","${pageContext.request.contextPath}/upload?imageId="+data);
+                            success: function (map) {
+                                console.log(map);
+                                $('#photoPath').val(map.path);
+                                $('#foodImage').attr("src","data:image/png;base64,"+map.byteArray);
                             },
                             error: function(error) {
                                 console.log(error);
@@ -44,8 +45,9 @@
                 });
             </script>
             <input id="inputfile" type="file"/>
+            <input id="photoPath" name="photoPath" style="visibility: hidden"/>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-top: 50px;">
             <label for="title">Post Title</label>
             <input type="text" class="form-control" id="title" name="title" placeholder="Enter Post Title">
             <small id="emailHelp" class="form-text text-muted">Post Title</small>
