--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -14,7 +14,6 @@
             min-height: 100vh;
             width: 100vw;
         }
-
         .photo_wrap {
             width: 180px;
             height: 180px;
@@ -22,7 +21,6 @@
             border-radius: 50%;
             border: 4px solid #FFF;
         }
-
         .photo_box {
             width: 184px;
             height: 184px;
@@ -32,18 +30,15 @@
             background: linear-gradient(to right, #7f49e5, #F44336, #814ae9);
             margin: 0 auto;
         }
-
         .attr {
             font-size: 18px;
             padding-right: 10px;
             display: inline-block;
         }
-
         .attr span {
             font-size: 22px;
             font-weight: 700;
         }
-
         .uptake-btn{
             box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.25);
             border-radius: 15px;
@@ -85,33 +80,14 @@
             width: 100%;
             padding: 25px;
         }
-
-        .mt10 {
-            margin-top: 10px;
-        }
-
-        .mt40 {
-            margin-top: 40px;
-        }
-
-        .mb10 {
-            margin-bottom: 10px;
-        }
-
-        .title {
-            position: relative;
-        }
-
-        .post_card img {
-            width: 100%;
-        }
+        .mt10 {margin-top: 10px;}
+        .mt40 {margin-top: 40px;}
+        .mb10 { margin-bottom: 10px;}
+        .title {position: relative;}
+        .post_card img {width: 100%;}
         .w700{font-weight:700;}
         .t20{font-size:20px; margin-top:20px;}
-        .post_pop_card{width: 800px;
-            width: 800px;
-            background: #fff;
-            margin: 0 auto;
-            margin-top: 10%;}
+        .post_pop_card{width: 800px;width: 800px;background: #fff;margin: 0 auto;margin-top: 10%;}
         .date{font-size:12px; color:#ccc;}
         .mt20{margin-top:20px;}
         .mr15{margin-right: 5px;}
@@ -119,12 +95,20 @@
         .ptr15{padding-right: 15px;}
         .grid-wrapper{display: grid;grid-template-columns: 500px 400px;}
         .col-one{grid-column: 1/1;}
-        .col-two{grid-column: 2/2;
-            background: #fff;
-            padding: 15px;}
+        .col-two{grid-column: 2/2;background: #fff;padding: 15px;}
         .postimg img{width: 100%;}
-        .comment_items{height: 300px;
-            overflow-y: scroll;}
+        .comment_items{height: 300px;overflow-y: scroll;}
+        .floatleft{float: left;margin-right: 10px;margin-top: 4px;width: 35px;height: 35px;}
+        .model-body{padding:0 15px;}
+        .modal-title {margin: 0;line-height: 1.42857143;font-weight: 700;font-size: 16px;position: absolute;}
+        .c999{color:#999;}
+        .fright{float: right;}
+        .fitem{position:relative;}
+        .littleFollow{float: right;
+            padding: 4px 8px;
+            font-size: 12px;
+            position: absolute;
+            right: 0;}
     </style>
 
 </head>
@@ -147,7 +131,11 @@
                 <div class="attr_wrap mb10">
                     <div class="attr"><span th:text="${user.getPostList().size()}"></span> posts</div>
                     <div class="attr"><span th:text="${user.getFollowedUsers().size()}"></span> follower</div>
-                    <div class="attr"><span th:text="${user.getFollowingUser().size()}"></span> following</div>
+                    <div class="attr">
+                        <div th:onclick="'openFollowingModal(\'' + ${user.id} + '\');'">
+                            <span th:text="${user.getFollowingUser().size()}"></span> following
+                        </div>
+                    </div>
                 </div>
                 <p th:text="${user.getProfile() != null ? user.getProfile().getBio() : 'insert you bio'}"></p>
             </div>
@@ -157,16 +145,6 @@
                     <div th:onclick="'openPostModal(\'' + ${p.id} + '\');'">
                     <div class="post_card">
                         <img th:src="@{${'/img/' + p.getPhoto().getPath()}}">
-<!--                        <div th:text="${p.title}"></div>-->
-<!--                        <div th:text="${p.description}"></div>-->
-<!--                        <div>-->
-<!--                            <span th:text="${p.created}"></span>-->
-<!--                        </div>-->
-<!--                        <div class="post_card" th:each="comment, iterStat : ${p.getCommentList()}">-->
-<!--                            <div th:text="${comment.created}"></div>-->
-<!--                            <div th:text="${comment.description}"></div>-->
-<!--                            <div th:text="${comment.user.username}"></div>-->
-<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -174,6 +152,7 @@
     </div>
 </div>
 <div id="postModalHolder"><div id="postModal"></div></div>
+<div id="followingModalHolder"><div id="followingModal"></div></div>
     <script>
         function openPostModal(id) {
             console.log("open modal called");
@@ -182,6 +161,17 @@
                 success: function(data) {
                     $('#postModalHolder').html(data);
                     $('#postModal').modal("show");
+                }
+            });
+        }
+        function openFollowingModal(id) {
+            console.log("open modal called url=/following/"+id);
+            $.ajax({
+                url: "/following/" + id,
+                success: function(data) {
+                    console.log(data);
+                    $('#followingModalHolder').html(data);
+                    $('#followingModal').modal("show");
                 }
             });
         }
