--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -10,6 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
+        .container{
+            width: 960px;
+        }
         .bg_color {
             border-left: 3px solid #222649;
             min-height: 100vh;
@@ -87,7 +90,12 @@
         .mt40 {margin-top: 40px;}
         .mb10 { margin-bottom: 10px;}
         .title {position: relative; font-size: 24px;}
-        .post_card img {width: 100%;}
+        .post_card{width: 100%;
+            height: 300px;
+            overflow: hidden;
+            cursor: pointer;
+            margin-bottom: 30px;}
+        .post_card img {height: 100%; width:auto;}
         .w700{font-weight:700;}
         .t20{font-size:20px; margin-top:20px;}
         .post_pop_card{width: 800px;width: 800px;background: #fff;margin: 0 auto;margin-top: 10%;}
@@ -173,7 +181,7 @@
             </div>
         </div>
         <div class="row mt40">
-            <div class="col-md-3" th:each="p, iterStat : ${user.getPostList()}">
+            <div class="col-md-4" th:each="p, iterStat : ${user.getPostList()}">
                     <div th:onclick="'openPostModal(\'' + ${p.id} + '\');'">
                     <div class="post_card">
                         <img th:src="@{${'/img/' + p.getPhoto().getPath()}}">
