--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -28,8 +28,6 @@
 .home-container {
     background-color: #fafafa;
     display: flex;
-    flex-flow: row;
-    justify-content: space-between;
 }
 
 .navigation-left {
@@ -40,9 +38,13 @@
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     transform: translateX(-70px);
+    position: fixed;
+    left: 0;
+    z-index: 10;
 }
 
 .home-main {
+    margin: auto;
     height: 100vh;
     width: auto;
     display: flex;
@@ -79,6 +81,9 @@
     flex-direction: column;
     justify-content: space-between;
     transform: translateX(70px);
+    position: fixed;
+    right: 0;
+    z-index: 10;
 }
 
 .navigation-right-top {
@@ -118,6 +123,11 @@
     border: 1px solid rgba(61, 61, 61, 0.4);
     margin: 10px 0px;
 }
+.seperatorSlide{
+    width: 90%;
+    margin: 0;
+    border: .5px solid rgba(61, 61, 61, 0.4);
+}
 
 .profile-Image {
     width: 55px;
@@ -128,10 +138,123 @@
     object-fit: cover;
     margin: 20px 0px;
 }
-.number{
+
+.number {
     font-size: .7em;
 }
-.text{
+
+.text {
     font-family: PopMedium;
     font-size: .7em;
+}
+
+.slide {
+    position: fixed;
+    right: -500px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 500px;
+    height: 500px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.25);
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    z-index: 1;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.slide-search-header {
+    width: 90%;
+    height: 18%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide-search-header-searchBar {
+    border-radius: 50px;
+    border: 2px solid #6445D2;
+    width: 85%;
+    height: 55%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.slide-search-header-searchBar img{
+    width: 10%;
+}
+.slide-search-header-searchBar input[type="text"]{
+    font-size: 1em;
+    outline: none;
+    width: 77%;
+    border: none;
+    margin-left: 5px;
+}
+
+.slide-search-container {
+    display: inline;
+    width: 90%;
+    height: 78%;
+    overflow: scroll;
+}
+.slide-search-container-item{
+    display: flex;
+    flex-direction: row;
+    margin: 10px auto 0px auto;
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+    opacity: 0;
+}
+.slide-search-container-item-left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+}
+.slide-search-container-item-left img{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    border: 2px solid #6445D2;
+    object-fit: cover;
+}
+.slide-search-container-item-right{
+    display: flex;
+    flex-flow: column;
+    width: 75%;
+    height: 100%;
+    margin-left: 5px;
+    justify-content: center;
+}
+.slide-search-container-item-right > :first-child{
+    font-size: 1.4em;
+    font-weight: bold;
+    height: 50%;
+}
+.slide-search-container-item-right > :last-child{
+    font-size: 1.2em;
+    height: 50%;
+}
+slide-search-container-item-right a:visited, a{
+    color: #3d3d3d;
+}
+
+.loading-spinner{
+    margin: 20px auto 0px auto;
+    width: 40px;
+    height: 40px;
+    border-right: 3px solid #6445D2;
+    border-radius: 50%;
+    animation: spin .8s linear infinite;
+    display: none;
+}
+@keyframes spin{
+    100%{
+        transform: rotate(360deg);
+    }
 }
