--- a/src/main/resources/templates/post/postVideo.html
+++ b/src/main/resources/templates/post/postVideo.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/login.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Add Post</title>
@@ -14,10 +13,13 @@
 
 <body>
 <div class="container">
-<!--    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">-->
-    <form method="POST" action="#" th:action="@{/addPostData}" >
+    <!--    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">-->
+    <form method="POST" action="#" th:action="@{/addPostVideo}" >
         <div class="form-group" style="height: 400px;">
-            <img src="" id="foodImage" style="height: 100%;width: 100%;object-fit: cover;"/>
+            <video id="divVideo" controls="controls" style="width: 100%; height: 100%">
+                <source src="" type="video/mp4">
+                Your browser does not support the HTML5 Video element.
+            </video>
             <script>
                 $(document).ready(function () {
                     $('#inputfile').change(function () {
@@ -25,7 +27,7 @@
                         var form_data = new FormData();
                         form_data.append('file', file_data);
                         $.ajax({
-                            url: "/uploadPhoto",
+                            url: "/uploadVideo",
                             enctype: 'multipart/form-data',
                             type: "POST",
                             data: form_data,
@@ -34,8 +36,9 @@
                             processData: false,
                             success: function (map) {
                                 console.log(map);
-                                $('#photoPath').val(map.path);
-                                $('#foodImage').attr("src","data:image/png;base64,"+map.byteArray);
+                                $('#divVideo source').attr('src', "data:video/mp4;base64,"+map.byteArray);
+                                $("#divVideo")[0].load();
+                                $("#videoPath").val(map.path);
                             },
                             error: function(error) {
                                 console.log(error);
@@ -45,7 +48,7 @@
                 });
             </script>
             <input id="inputfile" type="file"/>
-            <input id="photoPath" name="photoPath" style="visibility: hidden"/>
+            <input id="videoPath" name="photoPath" style="visibility: hidden"/>
         </div>
         <div class="form-group" style="margin-top: 50px;">
             <label for="title">Post Title</label>
