--- a/src/main/resources/templates/admin/adminPosts.html
+++ b/src/main/resources/templates/admin/adminPosts.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Admin panel</title>
-    <!--    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Menu</a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Sign out</a>
+            <a class="nav-link" href="#">You signed as Admin</a>
         </li>
     </ul>
 </nav>
@@ -66,6 +64,37 @@
             </div>
         </nav>
 
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <h2>Post List</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>Post Id</th>
+                        <th>Title</th>
+                        <th>Date</th>
+<!--                        <th>User Id</th>-->
+                        <th>Unhealthy</th>
+                        <th>Status</th>
+                        <th>Edit</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="poste: ${posts}">
+                        <td th:text="${poste.id}" />
+                        <td th:text="${poste.title}" />
+                        <td th:text="${poste.created}" />
+<!--                        <td th:text="${poste.user.id}}"/>-->
+                        <td th:text="${(poste.isUnhealthy) ? 'Yes' : 'No'}"></td>
+                        <td th:text="${poste.status}"></td>
+<!--                        <td th:text="${poste.status}" />-->
+                        <td><input type="button" id="submit" value="Disable/Enable"></td>
+
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </main>
     </div>
 </div>
 </div>
