--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+    <div class="LanguageChanger">
+        <p>
+            <a href="?Language=en"><span>English</span></a>
+            <span> | </span>
+            <a href="?Language=mn"><span>Монгол</span></a>
+        </p>
+    </div>
     <div class="login-container">
         <div class="login-background">
             <img id="login-left-vector" th:src="@{/Assets/Vector-1.svg}" alt="">
