--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -200,6 +200,19 @@ body {
     text-decoration: underline;
 }
 
+.LanguageChanger{
+    position: fixed;
+    top: 10px;
+    right: 40px;
+    color: #fafafa;
+    z-index: 10;
+    cursor: pointer;
+    font-size: 1.3em;
+}
+.LanguageChanger a{
+    color: #fafafa;
+}
+
 @media(max-width: 1080px) {
     .login-form {
         position: static;
